# voice-user

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: session-report.md
.session-reports/: _TEMPLATE.md
scripts/: session-cleanup.sh  session-start.sh
src/voice_user/: __init__.py  analyses.py  db.py  recordings.py  sessions.py  types.py  users.py
tests/: test_analyses.py  test_db.py  test_imports.py  test_integration.py  test_recordings.py  test_sessions.py  test_users.py
