[project]
name = "voice-user"
version = "0.1.0"
description = "Shared user/profile/storage for voice coaching apps"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "soundfile",
    "uuid_utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_user"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
